--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -30,3 +30,22 @@ button.logout {
 td > a, td > button {
 	margin-right: 10px;
 }
+
+.light-text {
+	font-weight: 500;
+    color: #555;
+}
+
+.round-link {
+	padding: 2px 30px;
+    border-radius: 40px;
+    background: #54e69d;
+    color: #fff;
+    margin-top: 5px;
+    font-size: 0.9em;
+    text-decoration: none !important;
+}
+
+a.round-link:hover {
+	color: #fff;
+}
