--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -55,3 +55,13 @@ a.round-link.disabled {
 	opacity: .65;
 	pointer-events: none;
 }
+
+.modal {
+	margin-top: 55px;
+}
+
+@media(max-width: 575px) {
+	.modal {
+		margin-top: 65px;
+	}
+}
