--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -71,13 +71,13 @@ a.text {
 }
 
 /*CARD LINK*/
-.item-link:hover, .item-link:nth-of-type(even):hover {
+.item-link:hover {
   background-color: #eceeef;
 }
 .item-link:active {
   background-color: #eceeef;
 }
 
-.item-link:nth-of-type(even) {
-	background: #fafafa;
+.item-link {
+	border-bottom: 1px solid #eee;
 }
