add custom icon to input

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -119,7 +119,7 @@ a.text {
     /* in case of FastClick lib use */
 }
 
-.inputfile + label svg {
+.inputfile + label i {
     width: 1em;
     height: 1em;
     vertical-align: middle;
