--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -155,3 +155,25 @@ a.text {
 .inputfile-warning + label:hover {
     background-color: #ec971f;
 }
+
+/*
+ *  CUSTOM SCROLLBAR
+ */
+
+::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+  width: 7px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+  background-color: #2f333e;
+  border: 1px solid #555555;
+}
