update scrollbar color

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -175,6 +175,6 @@ a.text {
 ::-webkit-scrollbar-thumb
 {
   border-radius: 5px;
-  background-color: #2f333e;
-  border: 1px solid #555555;
+  background-color: #b3b3b3;
+  border: 1px solid #b3b3b3;
 }
