--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -397,6 +397,12 @@ nav.side-navbar .title h1 {
   color: #333;
 }
 
+/*CUSTOM LINK NAV TITLE*/
+nav.side-navbar .title h1 a{
+  text-decoration: none;
+  font-size: inherit;
+}
+
 nav.side-navbar .title p {
   font-size: 0.9em;
   font-weight: 200;
