--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -1757,10 +1757,11 @@ section.forms .line {
   height: 100%;
   display: block;
   z-index: -1;
-  background: url(../img/bg.jpg);
-  background-size: cover;
-  -webkit-filter: blur(10px);
-  filter: blur(10px);
+  /*background: url(../img/bg.jpg);*/
+  background-color: #2f333e;
+  /*background-size: cover;*/
+  /*-webkit-filter: blur(10px);*/
+  /*filter: blur(10px);*/
   z-index: 1;
   position: absolute;
   top: 0;
