implement galery section

--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -58,3 +58,10 @@ body {
 	font-weight: 600;
 	font-size: 1.4rem;
 }
+
+.galery {
+	padding-top: 5rem;
+	padding-bottom: 5rem;
+	background-color: #eee;
+	/*color: white;*/
+}
