--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -65,3 +65,11 @@ body {
 	background-color: #eee;
 	/*color: white;*/
 }
+
+footer {
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+	background-color: #2f333e;
+	font-size: 90%;
+	color: white;
+}
